tests/fixtures/invalid/pow_bytes_float_float.py
# Cannot call pow() with Bytes, Float, Float
x = pow(b"hello", 1.0, 1.0)
